--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
     "web-vitals": "^2.1.4"
